--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ sourceCompatibility = 1.7
 repositories {
 //    mavenCentral()
     mavenLocal()
-    maven { url 'http://mirrors.ibiblio.org/maven2/' }
+//    maven { url 'http://mirrors.ibiblio.org/maven2/' }
+    mavenCentral()
 }
 
 dependencies {
@@ -21,6 +22,7 @@ dependencies {
     compile 'javax.servlet:javax.servlet-api:3.1.0'
 
     compile 'com.google.code.gson:gson:2.4'
+    compile 'org.apache.commons:commons-lang3:3.3.2'
 }
 
 // Embeded Jetty for testing
